--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
-version: "3.8"
 services:
+  # PHP Service
   app:
     build:
       context: .
@@ -7,8 +7,6 @@ services:
     container_name: financial-wallet-api-app
     volumes:
       - .:/var/www/html
-    ports:
-      - "8000:8000"
     environment:
       - APP_ENV=local
       - APP_DEBUG=true
@@ -20,7 +18,22 @@ services:
       - DB_PASSWORD=root
     depends_on:
       - db
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
+  # Nginx Service
+  nginx:
+    image: nginx:alpine
+    container_name: financial-wallet-api-nginx
+    ports:
+      - "8000:80"
+    volumes:
+      - .:/var/www/html
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
+
+  # MySQL Service
   db:
     image: mysql:8.0
     container_name: financial-wallet-api-db
